# rankonvert

./: .gitignore  .travis.yml  Cargo.toml  README.md
resources/: input.json  smolinput.json
src/: main.rs
