[package]
name = "rankonvert"
version = "0.2.1"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"

[dependencies]
beatmap_parser = { version = "0.1.4", features = [ "beatsaver", "audio" ] }
csv = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
threadpool = "1"